--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "nothing",
   "main": "index.js",
   "scripts": {
-    "start": "node build/index.js",
+    "start": "node opt/index.js",
     "debug": "ts-node src/index.ts",
     "compile": "tsc -p .",
     "compile:test": "tsc -p . --noEmit"
