--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,46 +1,32 @@
-name: Deploy to VPS
+name: Run on VPS
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
   workflow_dispatch:
 
 jobs:
-  deploy:
+  runs:
     runs-on: ubuntu-latest
+
+    env:
+      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+      REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+      REMOTE_PORT: ${{ secrets.REMOTE_PORT }}
+      REMOTE_USER: ${{ secrets.REMOTE_USER }}
+      DIR_NAME: laura
+
     steps:
       - uses: actions/checkout@v2
-      
-      - name: Setup Node
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-          cache: 'npm'
-      
-      - name: Install npm dependencies
-        run: npm i
+      - name: Prepare SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "$PRIVATE_KEY" > ~/.ssh/key && chmod 600 ~/.ssh/key
+          ssh-keyscan -p $REMOTE_PORT $REMOTE_HOST > ~/.ssh/known_hosts
 
-      - name: Run compile task
-        run: npm run compile
-        
-      - name: SSH Deploy
-        uses: easingthemes/ssh-deploy@main
-        env:
-            SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_SERVER_PRIVATE_KEY }}
-            REMOTE_HOST: ${{ secrets.DEPLOY_SERVER_HOST }}
-            REMOTE_USER: ${{ secrets.DEPLOY_SERVER_USER }}
-            REMOTE_PORT: ${{ secrets.DEPLOY_SERVER_PORT }}
-            TARGET: /home/${{ secrets.DEPLOY_SERVER_USER }}/laura
+      - name: Deploy to VPS
+        run: rsync -rltgoDzvOc --delete -e "ssh -p $REMOTE_PORT -i ~/.ssh/key" $GITHUB_WORKSPACE/* $REMOTE_USER@$REMOTE_HOST:/home/$REMOTE_USER/$DIR_NAME
 
       - name: Restart Docker Compose
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.DEPLOY_SERVER_HOST }}
-          username: ${{ secrets.DEPLOY_SERVER_USER }}
-          port: ${{ secrets.DEPLOY_SERVER_PORT }}
-          key: ${{ secrets.DEPLOY_SERVER_PRIVATE_KEY }}
-          script: |
-            cd /home/${{ secrets.DEPLOY_SERVER_USER }}/laura
-            docker-compose down -v
-            docker-compose up -d
+        run: ssh $REMOTE_USER@$REMOTE_HOST -p $REMOTE_PORT -i ~/.ssh/key "cd $DIR_NAME && docker-compose build --pull && docker-compose down -v && docker-compose up -d"
