--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: '16'
           cache: 'npm'
-      
+
       - name: Install npm dependencies
         run: npm i
 
@@ -39,7 +39,7 @@ jobs:
           ssh-keyscan -p $REMOTE_PORT $REMOTE_HOST > ~/.ssh/known_hosts
 
       - name: Deploy to VPS
-        run: rsync -rltgoDzvOc --delete -e "ssh -p $REMOTE_PORT -i ~/.ssh/key" $GITHUB_WORKSPACE/* $REMOTE_USER@$REMOTE_HOST:/home/$REMOTE_USER/$DIR_NAME
+        run: rsync -rltgoDzvOc --delete --exclude "data" -e "ssh -p $REMOTE_PORT -i ~/.ssh/key" $GITHUB_WORKSPACE/* $REMOTE_USER@$REMOTE_HOST:/home/$REMOTE_USER/$DIR_NAME
 
       - name: Restart Docker Compose
         run: ssh $REMOTE_USER@$REMOTE_HOST -p $REMOTE_PORT -i ~/.ssh/key "cd $DIR_NAME && docker-compose build --pull && docker-compose down -v && docker-compose up -d"
