--- a/package.json
+++ b/package.json
@@ -1,36 +1,25 @@
 {
+  "private": true,
   "name": "laura",
   "version": "1.0.0",
-  "description": "nothing",
-  "main": "index.js",
+  "license": "MIT",
+  "author": "tenzyu masuda",
   "scripts": {
     "start": "node opt/index.js",
     "debug": "ts-node src/index.ts",
-    "compile": "tsc -p .",
-    "compile:test": "tsc -p . --noEmit"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/shiina-family/discord-bot.git"
-  },
-  "keywords": [
-    "no"
-  ],
-  "author": "tenzyu masuda",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/shiina-family/discord-bot/issues"
-  },
-  "homepage": "https://github.com/shiina-family/discord-bot#readme",
-  "devDependencies": {
-    "@types/node": "^16.6.1",
-    "@types/node-schedule": "^1.3.2",
-    "ts-node": "^10.2.0",
-    "typescript": "^4.3.5"
+    "compile": "tsc -p ."
   },
   "dependencies": {
-    "discord.js": "^13.1.0",
-    "dotenv": "^10.0.0",
-    "node-schedule": "^2.0.0"
+    "discord.js": "^13.6.0",
+    "dotenv": "^16.0.0",
+    "node-schedule": "^2.1.0",
+    "ts-dedent": "^2.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.31",
+    "@types/node-schedule": "^2.1.0",
+    "prettier": "^2.6.2",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   }
 }
